--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,14 +1,14 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "AIVLOG",
+  "name": "AIVANA's BLOG WEB APPLICATION",
   "icons": [
     {
       "src": "favicon.png",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "512x512",
       "type": "image/x-icon"
     }
   ],
-  "start_url": ".",
+  "start_url": "https://aivlog.vercel.app",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
